deployment/probes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: probes
    app.kubernetes.io/component: probes
    app.kubernetes.io/instance: probes
  name: probes
spec:
  port:
    targetPort: http-8080
  wildcardPolicy: None
  to:
    kind: Service
    name: probes
    weight: 100
